  * d/copyright
    - Converted to DEP5 format
    - Added myself for Debian part
  * Removed patches applied upstream:
    - d/p/fix_test_appcontext_signals.patch
    - d/p/fix_test_json_key_sorting.patch
  * Added python{3,}-click to build depends
  * Bumped required Python 2 version to 2.6
  * Enabled autopkgtest-pkg-python testsuite

 -- Ondřej Nový <novy@ondrej.org>  Tue, 29 Mar 2016 21:36:03 +0200

flask (0.10.1-2) unstable; urgency=low

  * Add python3-flask binary package
  * Add python-blinker to Recommends (used in flask.signals)
  * Switch to pybuild buildsystem
  * Add fix_test_appcontext_signals and fix_test_json_key_sorting patches
    and enable tests at build time (patches taken from upstream repo)

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 08 Aug 2013 22:19:13 +0200

flask (0.10.1-1) unstable; urgency=low

  * New upstream release
  * Add python-itsdangerous to Build-Depends and let dh_python2
    add it to Depends

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 16 Jun 2013 15:08:42 +0200

flask (0.9-2) unstable; urgency=low

  [ Jakub Wilk ]
  * Use canonical URIs for Vcs-* fields.

  [ Piotr Ożarowski ]
  * Add python-flask-doc binary package (closes: #703802)
  * debian/compat bumped to 9
  * Standards-Version bumped to 3.9.4 (no changes needed)
  * upload to unstable

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 05 May 2013 20:25:15 +0200

flask (0.9-1) experimental; urgency=low

  * New upstream release
    - upload to experimental due to Wheezy freeze
  * remove flask/testsuite from binary package (it's doesn't work outside
    build directory)
  * Standards-Version bumped to 3.9.3 (no changes needed)

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 03 Aug 2012 19:29:35 +0200

flask (0.8-1) unstable; urgency=low

  * New upstream release
  * Bump minimum required python-werkzeug version to 0.8

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 16 Oct 2011 19:37:43 +0200

flask (0.7.2-1) unstable; urgency=low

  * New upstream release
