@@ -13,9 +13,11 @@ override_dh_python3:
 	dh_python3 -p python3-flask
 	rm -rf debian/python3-flask/usr/lib/python3/dist-packages/flask/testsuite/
 
-override_dh_installdocs:
-	dh_installdocs
+override_dh_sphinxdoc:
+ifeq (,$(findstring nodocs, $(DEB_BUILD_OPTIONS)))
 	PYTHONPATH=. sphinx-build -N -q -E -b html docs/ debian/python-flask-doc/usr/share/doc/python-flask-doc/html/
+	dh_sphinxdoc
+endif
 
 override_dh_auto_clean:
 	dh_auto_clean
