@@ -13,6 +13,8 @@ flask (0.11.1-1) UNRELEASED; urgency=medium
   * Added python{3,}-click to build depends
   * Bumped required Python 2 version to 2.6
   * Enabled autopkgtest-pkg-python testsuite
+  * Use override_dh_sphinxdoc for building Sphinx docs and added nodocs
+    support
 
  -- Ondřej Nový <novy@ondrej.org>  Tue, 29 Mar 2016 21:36:03 +0200
 
